feat(application authentication): Split user route To separate admin operation from application operation
