# src/routes/user.routes.js
@@ -1,9 +1,12 @@
+const bcrypt = require('bcrypt');
 const express = require('express');
 const Joi = require('joi');
 
-const { BadRequestError, ResourceNotFoundError } = require('../errors');
+const { BadRequestError, ForbiddenError, ResourceNotFoundError } = require('../errors');
 
-const { requireAuthentication, requireAdminRights, requireApplicationAuthentication } = require('../middlewares/authentication.middleware');
+const { requireAuthentication, requireAdminRights, verifyAdminRights, verifyApplicationRights } = require('../middlewares/authentication.middleware');
+
+const User = require('../models/user.model');
 
 const router = express.Router();
 
@@ -208,6 +211,41 @@ const router = express.Router();
  *        character: '5c1c06cd8d93224570fcc65b'
  */
 
+/**
+ * SCHEMA: User
+ * @swagger
+ *
+ * components:
+ *  schemas:
+ *    UserCreate:
+ *      type: object
+ *      properties:
+ *        username:
+ *          type: string
+ *        discord_id:
+ *          type: string
+ *        admin:
+ *          type: boolean
+ *      example:
+ *        username: john Smith
+ *        discord_id: 11119836820
+ *        admin: false
+ *    User:
+ *      allOf:
+ *        - $ref: '#/components/schemas/UserCreate'
+ *        - type: object
+ *          properties:
+ *            id:
+ *              type: string
+ *          example:
+ *            id: '5c1c06cd8d93224570fcc65b'
+ *  securitySchemes:
+ *    admin:
+ *      type: http
+ *      scheme: bearer
+ *      bearerFormat: JWT
+ */
+
 router.use(requireAuthentication);
 
 /**
@@ -309,32 +347,189 @@ router.use(requireAuthentication);
  *
  */
 router
-  .get('/users', requireAdminRights, async (req, res, next) => {
-    try {
-      const users = await User.find({}, 'id username discord_id');
+  .get('/users', requireAuthentication, async (req, res, next) => {
+    if (verifyAdminRights(req.locals.authentication)) {
+      try {
+        const { discord_id } = req.query;
 
-      return res.json(users);
-    } catch (err) {
-      return next(err);
-    }
-  })
-  .get('/users', requireApplicationAuthentication, async (req, res, next) => {
-    try {
-      const { discord_id } = req.query;
+        const query = {};
 
-      const query = {};
+        if (discord_id) {
+          query.discord_id = discord_id;
+        }
 
-      if (discord_id) {
-        query.discord_id = discord_id;
+        const users = await User.find(query, 'id discord_id');
+
+        return res.json(users);
+      } catch (err) {
+        return next(err);
       }
+    } else if (verifyApplicationRights(req.locals.authentication)) {
+      try {
+        const { discord_id } = req.query;
 
-      const users = await User.find(query, 'id discord_id');
+        const query = {};
 
-      return res.json(users);
-    } catch (err) {
-      return next(err);
+        if (discord_id) {
+          query.discord_id = discord_id;
+        }
+
+        const users = await User.find(query, 'id discord_id');
+
+        return res.json(users);
+      } catch (err) {
+        return next(err);
+      }
+    } else {
+      return next(new ForbiddenError('Admin privileges or Application authentication are required to perform this action.'));
     }
   });
+
+/**
+ * @swagger
+ *
+ * /users:
+ *  post:
+ *    operationId: createUser
+ *    summary: Create a user
+ *    description: Create a user
+ *    tags:
+ *      - users
+ *    security:
+ *      - admin: []
+ *    requestBody:
+ *      description: User to create
+ *      content:
+ *        application/json:
+ *          schema:
+ *            $ref: '#/components/schemas/UserCreate'
+ *    responses:
+ *      201:
+ *        description: User created (see id in Location header)
+ *        content:
+ *          application/json:
+ *            schema:
+ *              $ref: '#/components/schemas/User'
+ */
+router.post('/users', requireAdminRights, async (req, res, next) => {
+  try {
+    const { username, discord_id, password } = req.body;
+
+    const result = Joi.validate({ username, discord_id, password }, Joi.object().keys({
+      username: Joi.string().alphanum().min(3).max(50).required(),
+      discord_id: Joi.string().regex(/^[0-9]{11}$/).required(),
+      password: Joi.string().regex(/^[a-zA-Z0-9]{8,30}$/),
+    }));
+
+    if (result.error) {
+      throw new BadRequestError('body should be { username: alphanum{3-50}, discord_id: [valid discord ID], password: [a-zA-Z0-9]{8,30}')
+    }
+
+    let hash;
+    try {
+      hash = await bcrypt.hash(password, 8);
+    } catch (err) {
+      console.error('Could not hash password: ', JSON.stringify(err));
+
+      throw new BadRequestError('Password is not valid.');
+    }
+
+    const userFound = await User.findOne({ $or: [{ username }, { discord_id }] });
+    if (userFound && userFound.discord_id === discord_id)  {
+      throw new BadRequestError('There is already a user with this discord_id.');
+    }
+    if (userFound) {
+      throw new BadRequestError('There is already a user with this username.');
+    }
+
+    const user = new User({ username, discord_id, password: hash });
+    await user.save();
+
+    const createdUser = await User.findOne({ username }, 'id username discord_id');
+
+    return res.json(createdUser);
+  } catch (err) {
+    return next(err);
+  }
+});
+
+/**
+ * @swagger
+ *
+ * /users/{userId}:
+ *  post:
+ *    operationId: updateUser
+ *    summary: Update a user
+ *    description: Update a user
+ *    tags:
+ *      - users
+ *    security:
+ *      - admin: []
+ *    parameters:
+ *      - $ref: '#/components/parameters/userId'
+ *    requestBody:
+ *      description: Fields to update
+ *      content:
+ *        application/json:
+ *          schema:
+ *            $ref: '#/components/schemas/UserCreate'
+ *    responses:
+ *      204:
+ *        description: User updated
+ */
+router.post('/users/:userId', requireAdminRights, async (req, res, next) => {
+  try {
+    const { userId } = req.params;
+    const { username, discord_id, password, admin } = req.body;
+
+    const result = Joi.validate({ username, discord_id, password }, Joi.object().keys({
+      username: Joi.string().alphanum().min(3).max(50),
+      discord_id: Joi.string().regex(/^[0-9]{11}$/),
+      password: Joi.string().regex(/^[a-zA-Z0-9]{8,30}$/),
+      admin: Joi.boolean(),
+    }));
+
+    let user;
+    try {
+      user = await User.findById(userId);
+    } catch(err) {
+      throw new BadRequestError('userID in path parameters is not a valid ID.');
+    }
+
+    if (!user) {
+      throw new ResourceNotFoundError('The user does not exist.', 'USER_NOT_FOUND');
+    }
+
+    if (result.username) {
+      user.username = result.username;
+    }
+    if (result.discord_id) {
+      user.discord_id = result.discord_id;
+    }
+    if (result.password) {
+      try {
+        user.password = await bcrypt.hash(result.password, 8);
+      } catch (err) {
+        console.error('Could not hash password: ', JSON.stringify(err));
+
+        throw new BadRequestError('Password is not valid.');
+      }
+    }
+    if (result.admin === true || result.admin === false) {
+      user.admin = result.admin;
+    }
+
+    try {
+      await user.save();
+    } catch (err) {
+      throw new BadRequestError('Check unity constraints.');
+    }
+
+    return res.sendStatus(204);
+  } catch (err) {
+    return next(err);
+  }
+});
 
 /**
  * @swagger
